// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`droppable-placeholder snapshot className 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <WithStyles(PlaceHolder)
    className="foo"
    isCategorize={true}
  >
    content
  </WithStyles(PlaceHolder)>
</div>
`;

exports[`droppable-placeholder snapshot disabled 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <WithStyles(PlaceHolder)
    disabled={true}
    isCategorize={true}
  >
    content
  </WithStyles(PlaceHolder)>
</div>
`;

exports[`droppable-placeholder snapshot grid 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <WithStyles(PlaceHolder)
    grid={
      Object {
        "columns": 2,
      }
    }
    isCategorize={true}
  >
    content
  </WithStyles(PlaceHolder)>
</div>
`;

exports[`droppable-placeholder snapshot renders 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <WithStyles(PlaceHolder)
    isCategorize={true}
  >
    content
  </WithStyles(PlaceHolder)>
</div>
`;
